deploy/k8s/nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jelly-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # # 必须指定后端为https协议
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: jelly.demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jelly-nginx
          servicePort: 80
  tls:
  - secretName: jelly-com-cert-tls
    hosts:
      - jelly.demo.com
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx # mount nginx-conf volumn to /etc/nginx
          readOnly: true
          name: nginx-conf
        - mountPath: /var/log/nginx
          name: log
      volumes:
      - name: nginx-conf
        configMap:
          name: jelly-nginx-config
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: log
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: jelly-nginx
spec:
  type: ClusterIp
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
